syntax = "proto3";
package ChampionFist;

enum ServerCommandType{
    S_EMPTY = 0;
    S_CONNECT = 1;
    S_LOAD = 2;
    S_BEGIN = 3;
    S_EXIT = 4;
    S_OPERATION = 5;
    S_END = 6;
}

message S_Connect{
    int32 state = 1;                    // state
}

message S_Load{
    int32 state = 1;                    // state
}

message S_Exit{
    int32 state = 1;                    // state
}

message S_Begin{
    int32 state = 1;                    // state
}

// message S_Operation{

// }

message S_End{
    int32 state = 1;                    // state
}


